--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -806,48 +806,55 @@ body {
   border-radius: 2px;
   bottom: 0;
 }
-.contact-form {
+/* Modal-form */
+.modal-form {
+  display: flex;
+  flex-direction: column;
 }
-.label-form {
-  margin-bottom: 4px;
+.modal-form-head {
+  color: var(--black-color);
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 28px;
+}
+.modal-form-field {
+  font-family: Roboto;
+  font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
-  letter-spacing: 0.01em;
   color: var(--title-text-color);
+  margin-bottom: 28px;
+
+  /* identical to box height */
+
+  letter-spacing: 0.01em;
+
+  color: #757575;
 }
 
-.contact-form-input {
+.modal-form-input-wrapper {
+  position: relative;
+  margin-top: 4px;
+  display: block;
+}
+.modal-form-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  margin-bottom: 28px;
+  box-sizing: border-box;
   border-radius: 4px;
-  cursor: pointer;
+  padding-left: 42px;
 }
-.contact-form-sumbit {
+.socical-footer-icon {
+  position: absolute;
+  
   display: block;
-  margin: 0 auto;
-  color: var(--white-color);
-  background: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  cursor: pointer;
-  padding: 10px 55px;
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.8;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-}
-
-.textarea {
-  resize: none;
-  width: 100%;
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  margin-bottom: 28px;
-  border-radius: 4px;
-  cursor: pointer;
+  width: 18px;
+  height: 18px;
+  top: 0;
+  left: 12px;
 }
