--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -827,19 +827,27 @@ body {
   font-size: 12px;
   line-height: 1.16;
   color: var(--title-text-color);
-  margin-bottom: 28px;
-
-  /* identical to box height */
 
   letter-spacing: 0.01em;
 
   color: #757575;
 }
 
+.modal-form-field-curent {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  color: var(--title-text-color);
+  margin-bottom: 10px;
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
 .modal-form-input-wrapper {
-  position: relative;
   margin-top: 4px;
   display: block;
+  position: relative;
 }
 .modal-form-input {
   width: 100%;
@@ -848,13 +856,128 @@ body {
   box-sizing: border-box;
   border-radius: 4px;
   padding-left: 42px;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-form-input:focus,
+.modal-form-input:hover {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.modal-form-input:focus + .socical-footer-icon,
+.modal-form-input:hover + .socical-footer-icon {
+  fill: var(--accent-color);
+}
+
 .socical-footer-icon {
   position: absolute;
-  
+  top: 50%;
+  transform: translateY(-50%);
   display: block;
   width: 18px;
   height: 18px;
-  top: 0;
   left: 12px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-input-wrapper {
+  margin-bottom: 10px;
+}
+.modal-form-messege {
+  width: 100%;
+  height: 120px;
+  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  padding: 12px 16px;
+  resize: none;
+  outline: none;
+  border-radius: 4px;
+}
+
+.modal-form-messege::placeholder {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form-messege:focus,
+.modal-form-messege:hover {
+  outline: none;
+  border-color: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
+  background-color: var(--accent-color);
+  background-image: url(../images/icons/Vector.svg);
+  background-repeat: no-repeat;
+  background-origin: border-box;
+  background-position: center;
+  border-color: transparent;
+}
+.modal-form-checkbox-label::before {
+  display: block;
+  content: '';
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 7px;
+}
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+.modal-form-checkbox:focus + .modal-form-checkbox-label::before {
+  outline: none;
+  border-color: var(--accent-color);
+}
+.modal-form-checkbox-label {
+  display: flex;
+  align-items: center;
+
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7px;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin-bottom: 30px;
+  margin-left: 14px;
+}
+.modal-form-label-link {
+  color: var(--accent-color);
+  line-height: 1.71;
+  text-decoration-line: underline;
+}
+.modal-form-btn {
+  display: block;
+  padding: 10px 55px;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+  border: transparent;
 }
