--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -559,6 +559,78 @@ body {
   margin-bottom: 20px;
 }
 
+.subscription {
+  margin-left: 93px;
+}
+.subscription-title {
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #ffffff;
+
+  margin-bottom: 20px;
+  padding-top: 12px;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+
+  background-color: transparent;
+  padding: 15px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: none;
+
+  color: #ffffff;
+}
+
+.footer-input:focus {
+  border-color: var(--accent-color);
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-submit-button {
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
+
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+
+  padding: 10px;
+  padding-left: 29px;
+  margin-left: 12px;
+
+  background: var(--accent-color);
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+
+  cursor: pointer;
+  outline: none;
+}
+
+.icon-submit {
+  width: 24px;
+  height: 24px;
+}
+
 /* Портфолио */
 /* Навигация страницы портфолио */
 .header-nav {
@@ -871,7 +943,7 @@ body {
   fill: var(--accent-color);
 }
 
-.socical-footer-icon {
+.socical-footer-icon-current {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
