--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -559,6 +559,11 @@ body {
   margin-bottom: 20px;
 }
 
+.subscription-form {
+  display: flex;
+  align-items: baseline;
+}
+
 .subscription {
   margin-left: 93px;
 }
@@ -569,14 +574,11 @@ body {
   color: #ffffff;
 
   margin-bottom: 20px;
-  padding-top: 12px;
 }
 
 .footer-input {
   width: 358px;
   height: 50px;
-  margin-left: 12px;
-
   background-color: transparent;
   padding: 15px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -605,15 +607,15 @@ body {
   display: inline-flex;
   align-items: center;
   text-align: center;
-
-  width: 200px;
-  height: 50px;
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.06em;
+  margin-left: 12px;
 
-  padding: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   padding-left: 29px;
+  padding-right: 28px;
 
   background: var(--accent-color);
   color: #ffffff;
